examples/smlfmt-1.2.0/test/fail/mismatched-function-name-2.sml
fun hello 0 = "hello"
  | hello _ = "goodbye"
and hello 1 = "what"
  | goodbye _ = "huh"
